--- a/_site.yml
+++ b/_site.yml
@@ -1,10 +1,18 @@
-name: "my-website"
+name: "Daniel Tregeagle, Ph.D."
+output_dir: "."
 navbar:
-  title: "My Website"
+  title: "Daniel Tregeagle, Ph.D."
   left:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Research"
+      href: research.html
+    - text: "Teaching"
+      href: teaching.html
+    - text: "CV"
+      href: cv.html  
       
-output_dir: "."
+output:
+  html_document:
+    theme: yeti
+    css: style.css
