Testing the photo

--- a/_site.yml
+++ b/_site.yml
@@ -11,6 +11,9 @@ navbar:
       href: teaching.html
     - text: "CV"
       href: cv.html  
+  right:
+    - icon: fa-envelope-o fa-lg
+      href: mailto:danieltregeagle@gmail.com
       
 output:
   html_document:
