Disable google analytics

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ theme = "PaperMod"
   ShowBreadCrumbs = true
   defaultTheme = "auto"
   customCSS = ["style.css"]
+  disableGoogleAnalytics = true
 
 [menu]
 
