--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,11 @@ theme = "PaperMod"
   customCSS = ["style.css"]
   disableGoogleAnalytics = true
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [menu]
 
   [[menu.main]]
