Update config.toml to work with default ox-hugo behavior

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,9 @@ theme = "PaperMod"
     [markup.goldmark.renderer]
       unsafe = true
 
+[permalinks]
+  posts = "/:slug/"
+
 [menu]
 
   [[menu.main]]
